Infinite loop (and stack overflow) on mouse-moved with ctrl-tab panel. b=463285 r=josh sr=vlad